apps/ict/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ict
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - ict.chasingthe.cloud
      secretName: ict-tls
  rules:
    - host: ict.chasingthe.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ict
                port:
                  number: 80
